--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -182,8 +182,12 @@ jobs:
         shell: bash -el {0}
         run: |
           shopt -s nullglob  # Fail if the following pattern yields no results
+          echo "Finding matches"
           matches=(MNE-Python-*-*.*)
+          echo "Extracting fname"
           installer_fname="${matches[0]}"
+          echo "Found name: ${installer_fname}"
+          echo "Want name:  ${MNE_INSTALLER_NAME}"
           test "$installer_fname" == "$MNE_INSTALLER_NAME"
           hash_fname="${MNE_INSTALLER_NAME}.sha256.txt"
           shasum -a 256 "$MNE_INSTALLER_NAME" > "$hash_fname"
