--- a/recipes/mne-python_1.1/construct.yaml
+++ b/recipes/mne-python_1.1/construct.yaml
@@ -120,6 +120,7 @@ specs:
   - openneuro-py
   # sleep staging
   - sleepecg
+  - yasa
   # various biological signals (ECG, EOG, EMG, …)
   - neurokit2
   # GitHub client, https://cli.github.com
