--- a/recipes/mne-python_1.1/construct.yaml
+++ b/recipes/mne-python_1.1/construct.yaml
@@ -72,13 +72,11 @@ specs:
   - mne-realtime ~=0.1.0
   - mne-features ~=0.2.0
   - mne-rsa ~=0.6.0
-  - mne-microstates ~=0.3.0
   - mne-ari ~=0.1.0
   - mne-kit-gui ~=1.0.1
   - mne-icalabel ~=0.1.0  # [not win]
   - autoreject ~=0.3.1
   - pyprep ~=0.4.0
-  - pycrostates
   # Python
   - python ~=3.10.0
   - pip
@@ -109,6 +107,9 @@ specs:
   - neurodsp
   - bycycle
   - fooof
+  # Microstates
+  - mne-microstates ~=0.3.0
+  - pycrostates ~=0.1.1
   # MNE-BIDS-Pipeline
   # try to keep this in sync with https://github.com/mne-tools/mne-bids-pipeline/blob/main/requirements.txt
   # note that many dependencies listed there are redundant and need not be explicitly listed here
