Revert "Use provision-with-micromamba v11"
This reverts commit dbfe7f3fdf1c93cd997eb9b4921c8a1f839f8479.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,7 +113,7 @@ jobs:
           echo "RECIPE_DIR=${RECIPE_DIR}" >> $GITHUB_ENV
 
       - name: Install Micromamba
-        uses: mamba-org/provision-with-micromamba@v11
+        uses: mamba-org/provision-with-micromamba@main
         with:
           environment-file: environment.yml
           micromamba-version: latest
