--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,12 +27,13 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
+
     steps:
       - name:  Use bash from MSYS2 on Windows
         if: ${{ runner.os == 'Windows' }}
         shell: pwsh
         run:   |
-          echo "{C:\msys64\usr\bin}" >> $GITHUB_PATH
+          echo "C:\msys64\usr\bin" >> $GITHUB_PATH
 
       # Based on https://docs.github.com/en/actions/deployment/deploying-xcode-applications/installing-an-apple-certificate-on-macos-runners-for-xcode-development
       - name: Install code-signing certificates (macOS)
