--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,21 +19,18 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-18.04, macos-10.15, windows-2019]
-        arch: [x86_64]
         include:
-          - os: macos-11
-            arch: arm64
+          - { os: macos-10.15,  arch: x86_64, shell: bash }
+          - { os: macos-11,     arch: arm64,  shell: bash }
+          - { os: ubuntu-18.04, arch: x86_64, shell: bash }
+          - { os: windows-2019, arch: x86_64, shell: msys2 }
 
     runs-on: ${{ matrix.os }}
 
-
     steps:
-      - name:  Use bash from MSYS2 on Windows
+      - name: Setup MSYS2 (Windows)
         if: ${{ runner.os == 'Windows' }}
-        shell: pwsh
-        run:   |
-          echo "C:\msys64\usr\bin" >> $GITHUB_PATH
+        uses: msys2/setup-msys2@v2
 
       # Based on https://docs.github.com/en/actions/deployment/deploying-xcode-applications/installing-an-apple-certificate-on-macos-runners-for-xcode-development
       - name: Install code-signing certificates (macOS)
@@ -98,7 +95,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Extract version information
-        shell: bash -el {0}
+        shell: ${{ matrix.shell}} -el {0}
         env:
           MNE_CROSSCOMPILE_ARCH: ${{ matrix.arch }}
         run: |
@@ -132,7 +129,7 @@ jobs:
 
       - name: Add macOS M1 support
         if: ${{ matrix.arch == 'arm64' }}
-        shell: bash -el {0}
+        shell: ${{ matrix.shell}} -el {0}
         run: |
           source ./tools/setup_m1_crosscompile.sh
           echo "EXE_ARG=${EXE_ARG}" >> $GITHUB_ENV
@@ -140,12 +137,12 @@ jobs:
 
       - name: Patch config (macOS pull request)
         if: ${{ runner.os == 'macOS' && github.event_name != 'pull_request' }}
-        shell: bash -el {0}
+        shell: ${{ matrix.shell}} -el {0}
         run: |
           sed -i "" "s/_name: *# \[osx\]/_name: 9779L28NP8  # \[osx\]/" ${RECIPE_DIR}/construct.yaml
 
       - name: Build installer
-        shell: bash -el {0}
+        shell: ${{ matrix.shell}} -el {0}
         # As of 2022/03/14, ~7 min on 20.04 (fastest) and ~11 min on windows-2019 (slowest).
         # So let's set this to a reasonable limit that will tell us more quickly
         # if something has gone wrong with dependency resolution.
@@ -186,7 +183,7 @@ jobs:
           xcrun stapler staple ${MNE_INSTALLER_NAME}
 
       - name: Calculate SHA256 hash of installer package
-        shell: bash -el {0}
+        shell: ${{ matrix.shell}} -el {0}
         run: |
           shopt -s nullglob  # Fail if the following pattern yields no results
           echo "Finding matches"
