--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,13 @@ concurrency:
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
     tags:
     - '*'
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -95,7 +97,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Extract version information
-        shell: ${{ matrix.shell }} -el {0}
+        shell: '${{ matrix.shell }} -el {0}'
         env:
           MNE_CROSSCOMPILE_ARCH: ${{ matrix.arch }}
         run: |
@@ -129,7 +131,7 @@ jobs:
 
       - name: Add macOS M1 support
         if: ${{ matrix.arch == 'arm64' }}
-        shell: ${{ matrix.shell }} -el {0}
+        shell: '${{ matrix.shell }} -el {0}'
         run: |
           source ./tools/setup_m1_crosscompile.sh
           echo "EXE_ARG=${EXE_ARG}" >> $GITHUB_ENV
@@ -137,12 +139,12 @@ jobs:
 
       - name: Patch config (macOS pull request)
         if: ${{ runner.os == 'macOS' && github.event_name != 'pull_request' }}
-        shell: ${{ matrix.shell }} -el {0}
+        shell: '${{ matrix.shell }} -el {0}'
         run: |
           sed -i "" "s/_name: *# \[osx\]/_name: 9779L28NP8  # \[osx\]/" ${RECIPE_DIR}/construct.yaml
 
       - name: Build installer
-        shell: ${{ matrix.shell }} -el {0}
+        shell: '${{ matrix.shell }} -el {0}'
         # As of 2022/03/14, ~7 min on 20.04 (fastest) and ~11 min on windows-2019 (slowest).
         # So let's set this to a reasonable limit that will tell us more quickly
         # if something has gone wrong with dependency resolution.
@@ -183,7 +185,7 @@ jobs:
           xcrun stapler staple ${MNE_INSTALLER_NAME}
 
       - name: Calculate SHA256 hash of installer package
-        shell: ${{ matrix.shell }} -el {0}
+        shell: '${{ matrix.shell }} -el {0}'
         run: |
           shopt -s nullglob  # Fail if the following pattern yields no results
           echo "Finding matches"
