--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Extract version information
-        shell: '${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}'
+        shell: ${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}
         env:
           MNE_CROSSCOMPILE_ARCH: ${{ matrix.arch }}
         run: |
@@ -125,13 +125,13 @@ jobs:
           micromamba-version: latest
 
       - name: Patch constructor
-        shell: '${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}'
+        shell: ${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}
         run: |
           ./tools/patch_constructor.sh
 
       - name: Add macOS M1 support
         if: ${{ matrix.arch == 'arm64' }}
-        shell: '${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}'
+        shell: ${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}
         run: |
           source ./tools/setup_m1_crosscompile.sh
           echo "EXE_ARG=${EXE_ARG}" >> $GITHUB_ENV
@@ -139,12 +139,12 @@ jobs:
 
       - name: Patch config (macOS pull request)
         if: ${{ runner.os == 'macOS' && github.event_name != 'pull_request' }}
-        shell: '${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}'
+        shell: ${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}
         run: |
           sed -i "" "s/_name: *# \[osx\]/_name: 9779L28NP8  # \[osx\]/" ${RECIPE_DIR}/construct.yaml
 
       - name: Build installer
-        shell: '${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}'
+        shell: ${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}
         # As of 2022/03/14, ~7 min on 20.04 (fastest) and ~11 min on windows-2019 (slowest).
         # So let's set this to a reasonable limit that will tell us more quickly
         # if something has gone wrong with dependency resolution.
@@ -185,7 +185,7 @@ jobs:
           xcrun stapler staple ${MNE_INSTALLER_NAME}
 
       - name: Calculate SHA256 hash of installer package
-        shell: '${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}'
+        shell: ${{ runner.os == 'Windows' && 'msys2' || 'bash' }} -el {0}
         run: |
           shopt -s nullglob  # Fail if the following pattern yields no results
           echo "Finding matches"
