--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,7 +135,8 @@ jobs:
           echo ~
           cat ~/.bash_profile
           cat ~/.bashrc
-          mamba env list
+          ${MAMBA_EXE} activate ${MAMBA_ROOT_PREFIX}
+          conda list
 
       - name: Patch constructor
         run: |
