Try to source .bash_profile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,6 +135,7 @@ jobs:
           echo ~
           echo $HOME
           env
+          source ~/.bash_profile
           conda list
 
       - name: Patch constructor
