--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -134,9 +134,10 @@ jobs:
         run: |
           echo ~
           echo $HOME
-          env
-          $MAMBA_EXE shell init -p $MAMBA_ROOT_PREFIX -y
-          source ~/.bash_profile
+          # env
+          # $MAMBA_EXE shell init -p $MAMBA_ROOT_PREFIX -y
+          # source ~/.bash_profile
+          eval "$(micromamba shell hook --shell=bash)"
           micromamba activate constructor-env
           conda list
 
