--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -118,20 +118,20 @@ jobs:
           MNE_CROSSCOMPILE_ARCH: ${{ matrix.arch }}
         run: |
           source ./tools/extract_version.sh
-          echo "Version:   ${MNE_INSTALLER_VERSION} (Python=${PYSHORT})"
+          echo "Version:    ${MNE_INSTALLER_VERSION} (Python=${PYSHORT})"
           test "$MNE_INSTALLER_VERSION" != ""
           test "$PYSHORT" != ""
           test -d "$SCRIPT_DIR"
-          echo "Recipe:    ${RECIPE_DIR}"
+          echo "Recipe:     ${RECIPE_DIR}"
           test "$RECIPE_DIR" != ""
           test -d "$RECIPE_DIR"
-          echo "Installer: ${MNE_INSTALLER_NAME}"
+          echo "Installer:  ${MNE_INSTALLER_NAME}"
           test "$MNE_INSTALLER_NAME" != ""
-          echo "Artifact:  ${MNE_ARTIFACT_NAME}"
-          test "$MNE_ARTIFACT_NAME" != ""
+          echo "Artifact ID: ${MNE_INSTALLER_ARTIFACT_ID}"
+          test "$MNE_INSTALLER_ARTIFACT_ID" != ""
           echo "MNE_INSTALLER_VERSION=${MNE_INSTALLER_VERSION}" >> $GITHUB_ENV
           echo "MNE_INSTALLER_NAME=${MNE_INSTALLER_NAME}" >> $GITHUB_ENV
-          echo "MNE_ARTIFACT_NAME=${MNE_ARTIFACT_NAME}" >> $GITHUB_ENV
+          echo "MNE_INSTALLER_ARTIFACT_ID=${MNE_INSTALLER_ARTIFACT_ID}" >> $GITHUB_ENV
           echo "RECIPE_DIR=${RECIPE_DIR}" >> $GITHUB_ENV
 
       - name: Install Micromamba
@@ -228,7 +228,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ env.MNE_ARTIFACT_NAME }}
+          name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
           path: MNE-Python-*.*
 
   # Test
@@ -252,14 +252,14 @@ jobs:
         shell: bash -el {0}
         run: |
           source ./tools/extract_version.sh
-          echo "MNE_ARTIFACT_NAME=${MNE_ARTIFACT_NAME}" >> $GITHUB_ENV
+          echo "MNE_INSTALLER_ARTIFACT_ID=${MNE_INSTALLER_ARTIFACT_ID}" >> $GITHUB_ENV
           echo "MNE_INSTALLER_NAME=${MNE_INSTALLER_NAME}" >> $GITHUB_ENV
           echo "MNE_INSTALLER_VERSION=${MNE_INSTALLER_VERSION}" >> $GITHUB_ENV
 
       - name: Download appropriate installer
         uses: actions/download-artifact@v3
         with:
-          name: ${{ env.MNE_ARTIFACT_NAME }}
+          name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}
 
       - name: Run installer (macOS Intel)
         if: ${{ runner.os == 'macOS' && matrix.arch == 'x86_64' }}
@@ -311,7 +311,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ env.MNE_ARTIFACT_NAME }}-json
+          name: ${{ env.MNE_INSTALLER_ARTIFACT_ID }}-json
           path: MNE-Python-*.env.json
 
       - name: Check installation (macOS Intel)
@@ -434,7 +434,7 @@ jobs:
     if: github.ref_type == 'tag'
     runs-on: ubuntu-latest
     steps:
-      # These names should correspond to MNE_ARTIFACT_NAME in tools/extract_version.sh
+      # These names should correspond to MNE_INSTALLER_ARTIFACT_ID in tools/extract_version.sh
 
       - name: Download Linux installer
         uses: actions/download-artifact@v3
@@ -449,12 +449,12 @@ jobs:
       - name: Download Windows installer
         uses: actions/download-artifact@v3
         with:
-          name: MNE-Python-Windows-x86_64
+          name: MNE-Python-Windows-AMD64
 
       - name: Download Windows json
         uses: actions/download-artifact@v3
         with:
-          name: MNE-Python-Windows-x86_64-json
+          name: MNE-Python-Windows-AMD64-json
 
       - name: Download macOS Intel installer
         uses: actions/download-artifact@v3
