--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -475,10 +475,14 @@ jobs:
         with:
           name: MNE-Python-macOS-arm64
 
-      - name: Download macOS M1 json
-        uses: actions/download-artifact@v3
-        with:
-          name: MNE-Python-macOS-arm64-json
+      # We don't have a JSON, as this is only produced upon successful
+      # installation. Since we don't have an Apple Silicon runner on GHA,
+      # disable this for now.
+      #
+      # - name: Download macOS M1 json
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: MNE-Python-macOS-arm64-json
 
       - name: Check contents
         shell: bash -el {0}
