--- a/recipes/mne-python_1.1/construct.yaml
+++ b/recipes/mne-python_1.1/construct.yaml
@@ -63,21 +63,21 @@ specs:
 
   - mne =1.1.0=*_0
   - mne-installer-menus =1.1.0=*_0
-  - mne-qt-browser ~=0.3.1
-  - mne-bids ~=0.10
-  - mne-connectivity ~=0.3
-  - mne-faster ~=1.1.0
-  - mne-nirs ~=0.2.1
-  - mne-realtime ~=0.1.3
-  - mne-features ~=0.2
-  - mne-rsa ~=0.6.0
-  - mne-ari ~=0.1.1
-  - mne-kit-gui ~=1.0.1
-  - mne-icalabel ~=0.2  # [not win]
-  - autoreject ~=0.3.1
-  - pyprep ~=0.4.2
+  - mne-qt-browser =0.3.1
+  - mne-bids =0.10
+  - mne-connectivity =0.3
+  - mne-faster =1.1.0
+  - mne-nirs =0.2.1
+  - mne-realtime =0.1.3
+  - mne-features =0.2
+  - mne-rsa =0.6.0
+  - mne-ari =0.1.1
+  - mne-kit-gui =1.0.1
+  - mne-icalabel =0.2  # [not win]
+  - autoreject =0.3.1
+  - pyprep =0.4.2
   # Python
-  - python ~=3.10.0
+  - python =3.10.5
   - pip
   - conda
   - mamba
