--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -5,9 +5,9 @@ concurrency:
 
 on:
   push:
-    branches: *
+    branches: "*"
   pull_request:
-    branches: *
+    branches: "*"
 
 defaults:
   run:
