--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -23,4 +23,4 @@ jobs:
         activate-environment: "test"
         python-version: "3.10"
     - run: conda install packaging
-    - name: python tests/test_outdated.py
+    - run: python tests/test_outdated.py
