--- a/.github/workflows/outdated.yml
+++ b/.github/workflows/outdated.yml
@@ -18,5 +18,5 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: "3.10"
-    - run: pip install packaging requests yaml
+    - run: pip install packaging requests pyyaml
     - run: python tests/test_outdated.py
