--- a/recipes/mne-python_1.2/construct.yaml
+++ b/recipes/mne-python_1.2/construct.yaml
@@ -55,13 +55,14 @@ specs:
   # MNE ecosystem
 
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS START: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
-  - mne = 1.2dev0=*_0
+  - mne = 1.2dev0=*_20221007
+  - mne-bids = 0.11dev0=*_20221007
   # TODO: ⛔️ ⛔️ ⛔️ DEV BUILDS STOP: CHANGE BEFORE RELEASE! ⛔️ ⛔️ ⛔️
 
   # - mne =1.2.0=*_0
+  # - mne-bids =0.10
   - mne-installer-menus =1.2.0=*_0
   - mne-qt-browser =0.3.1
-  - mne-bids =0.10
   - mne-connectivity =0.3
   - mne-faster =1.1.0
   - mne-nirs =0.2.1
