--- a/recipes/mne-python_1.2/construct.yaml
+++ b/recipes/mne-python_1.2/construct.yaml
@@ -134,7 +134,7 @@ specs:
   - plotly
   # Temporary
   # for Vscode compatibility: https://github.com/microsoft/vscode-jupyter/issues/8552#issuecomment-1263940999
-  - ipywidgets <=7.7.2
+  - ipywidgets <8
 
 condarc:
   channels:
